--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             --top-bar-text: #000000;
         }
 
+        /* SECRET MODE: Насыщенный оранжевый */
         body.custom-mode {
             --bg-color: #FF8C00; 
             --main-color: #800080;
@@ -34,7 +35,8 @@
             --btn-text: #FF8C00;
             --top-bar-bg: #800080;
             --top-bar-text: #FF8C00;
-            --gallery-filter: sepia(100%) hue-rotate(15deg) saturate(300%) contrast(1.1);
+            /* Усиленный оранжевый фильтр (меньше желтого, больше сатурации) */
+            --gallery-filter: sepia(100%) hue-rotate(-10deg) saturate(500%) contrast(1.2);
             --bg-filter: none;
             background-image: none;
         }
@@ -56,20 +58,14 @@
         body {
             font-family: 'Bookish Book', Helvetica, Arial, sans-serif;
             background-color: var(--bg-color);
+            background-image: var(--overlay), var(--bg-image);
+            background-size: cover;
+            background-position: center;
             color: var(--main-color);
             margin: 0; height: 100vh; width: 100vw;
             overflow: hidden; display: flex; flex-direction: column; align-items: center;
             transition: background 0.4s ease, color 0.4s ease;
         }
-
-        #loading-screen {
-            position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            font-size: 14px; font-weight: bold; letter-spacing: 2px;
-            animation: pulse 1.5s infinite ease-in-out;
-            z-index: 1000;
-        }
-
-        @keyframes pulse { 0% { opacity: 0.2; } 50% { opacity: 1; } 100% { opacity: 0.2; } }
 
         #custom-cursor {
             width: 6px; height: 6px; border-radius: 50%;
@@ -84,8 +80,9 @@
         .top-bar {
             background: var(--top-bar-bg); color: var(--top-bar-text); font-size: 10px; height: 22px;
             display: flex; align-items: center; position: fixed; top: 0; width: 100%;
-            opacity: 0; transition: opacity 0.5s ease; z-index: 100; overflow: hidden;
+            transition: 0.5s ease; z-index: 100; overflow: hidden;
             letter-spacing: 0.5px;
+            opacity: 0; /* Скрыто изначально */
         }
 
         #marquee-text { white-space: nowrap; will-change: transform; }
@@ -93,14 +90,18 @@
         .title-wrapper {
             display: flex; flex-direction: column; position: absolute; left: 20px; top: 50%;
             transform: translateY(-50%); transition: 1s cubic-bezier(0.65, 0, 0.35, 1); z-index: 90;
-            visibility: hidden; /* Скрыто до конца загрузки */
         }
 
         h1 { 
             font-size: 14px; font-weight: bold; text-transform: uppercase; margin: 0; 
             color: var(--main-color); transition: color 0.4s ease, font-size 0.8s ease;
             letter-spacing: -0.5px;
+            min-height: 1em;
         }
+
+        /* Анимация мерцания */
+        .blink { animation: blink-anim 1s infinite; }
+        @keyframes blink-anim { 0%, 100% { opacity: 1; } 50% { opacity: 0.3; } }
         
         .location-text { 
             font-size: 9.5px; text-transform: uppercase; margin-top: 1px; opacity: 0; 
@@ -162,7 +163,6 @@
     </style>
 </head>
 <body oncontextmenu="return false;">
-    <div id="loading-screen">LOADING...</div>
     <div id="custom-cursor"></div>
     <audio id="bg-music" loop><source src="music.mp3" type="audio/mpeg"></audio>
     <audio id="custom-music" loop><source src="music1.mp3" type="audio/mpeg"></audio>
@@ -216,8 +216,8 @@
         const marqueeEl = document.getElementById('marquee-text');
         const topBar = document.getElementById('top-bar');
         const discordBtn = document.getElementById('discord-btn');
-        const loadingScreen = document.getElementById('loading-screen');
-        const mainTitle = document.getElementById('main-title');
+        const soundTooltip = document.getElementById('sound-tooltip');
+        const typewriterTitle = document.getElementById('typewriter-title');
 
         let isDarkMode = false, isMuted = true, pressTimer;
         let mouseX = window.innerWidth / 2, mouseY = window.innerHeight / 2;
@@ -228,10 +228,19 @@
 
         function updateMusic() {
             const isCustom = document.body.classList.contains('custom-mode');
+            soundTooltip.innerText = isCustom ? "ROAD2GOD - LOVEFOOL" : "VZk1ll Turbo 2000 - MESTO SMERTI";
             if (isMuted) return;
             const cur = isCustom ? audioCustom : audioDefault;
             const other = isCustom ? audioDefault : audioCustom;
             other.pause(); cur.play();
+        }
+
+        function setModeText() {
+            if (document.body.classList.contains('custom-mode')) {
+                modeBtn.innerText = "[ MODE: SECRET ]";
+            } else {
+                modeBtn.innerText = isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]";
+            }
         }
 
         const handleStart = () => {
@@ -239,9 +248,7 @@
                 const active = document.body.classList.toggle('custom-mode');
                 if (active) document.body.classList.remove('dark-mode');
                 else document.body.classList.toggle('dark-mode', isDarkMode);
-                if (active) modeBtn.innerText = "[ MODE: SECRET ]";
-                else modeBtn.innerText = isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]";
-                updateMusic();
+                setModeText(); updateMusic();
                 pressTimer = null;
             }, 800);
         };
@@ -252,9 +259,8 @@
                 if (!document.body.classList.contains('custom-mode')) {
                     isDarkMode = !isDarkMode;
                     document.body.classList.toggle('dark-mode', isDarkMode);
-                    modeBtn.innerText = isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]";
                 }
-                updateMusic();
+                setModeText(); updateMusic();
                 pressTimer = null;
             }
         };
@@ -283,26 +289,25 @@
 
         const textToType = "HELLO, IM DNKA!";
         let charIdx = 0;
+
         function typeView() {
             if (charIdx < textToType.length) {
-                document.getElementById('typewriter-title').textContent += textToType.charAt(charIdx++);
+                typewriterTitle.textContent += textToType.charAt(charIdx++);
                 setTimeout(typeView, 120);
             } else {
+                // Текст напечатан. Начинаем мерцать (скрытый прелоадер)
+                typewriterTitle.classList.add('blink');
                 setTimeout(() => {
-                    mainTitle.classList.add('moved');
+                    // Через 2 секунды мерцания продолжаем
+                    typewriterTitle.classList.remove('blink');
+                    document.getElementById('main-title').classList.add('moved');
                     setTimeout(() => {
                         document.getElementById('main-content').classList.add('visible');
-                        topBar.style.opacity = '1'; // Показываем полоску
-                        animationsStarted = true;   // Запускаем текст
+                        topBar.style.opacity = '1'; // Показываем верхнюю строку
+                        animationsStarted = true;   // Запускаем её движение
                     }, 1000);
-                }, 800);
+                }, 2000);
             }
-        }
-
-        function startSite() {
-            loadingScreen.style.display = 'none';
-            mainTitle.style.visibility = 'visible';
-            typeView();
         }
 
         let marqueePos = window.innerWidth;
@@ -335,11 +340,7 @@
             else { audioDefault.pause(); audioCustom.pause(); muteBtn.innerText = "[ SOUND: OFF ]"; targetSpeed = 0; }
         });
 
-        window.onload = () => {
-            // Имитация загрузки ресурсов (2 секунды мерцания)
-            setTimeout(startSite, 2000);
-            loop();
-        };
+        window.onload = () => { typeView(); loop(); };
     </script>
 </body>
 </html>
