--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             --top-bar-text: #000000;
         }
 
-        /* SECRET MODE: Насыщенный оранжевый */
         body.custom-mode {
             --bg-color: #FF8C00; 
             --main-color: #800080;
@@ -35,7 +34,6 @@
             --btn-text: #FF8C00;
             --top-bar-bg: #800080;
             --top-bar-text: #FF8C00;
-            /* Усиленный оранжевый фильтр (меньше желтого, больше сатурации) */
             --gallery-filter: sepia(100%) hue-rotate(-10deg) saturate(500%) contrast(1.2);
             --bg-filter: none;
             background-image: none;
@@ -58,9 +56,6 @@
         body {
             font-family: 'Bookish Book', Helvetica, Arial, sans-serif;
             background-color: var(--bg-color);
-            background-image: var(--overlay), var(--bg-image);
-            background-size: cover;
-            background-position: center;
             color: var(--main-color);
             margin: 0; height: 100vh; width: 100vw;
             overflow: hidden; display: flex; flex-direction: column; align-items: center;
@@ -74,15 +69,14 @@
             mix-blend-mode: difference;
             background: #fff; opacity: 0;
             will-change: transform, opacity;
-            transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: opacity 0.3s ease;
         }
 
         .top-bar {
             background: var(--top-bar-bg); color: var(--top-bar-text); font-size: 10px; height: 22px;
             display: flex; align-items: center; position: fixed; top: 0; width: 100%;
             transition: 0.5s ease; z-index: 100; overflow: hidden;
-            letter-spacing: 0.5px;
-            opacity: 0; /* Скрыто изначально */
+            letter-spacing: 0.5px; opacity: 0;
         }
 
         #marquee-text { white-space: nowrap; will-change: transform; }
@@ -95,11 +89,9 @@
         h1 { 
             font-size: 14px; font-weight: bold; text-transform: uppercase; margin: 0; 
             color: var(--main-color); transition: color 0.4s ease, font-size 0.8s ease;
-            letter-spacing: -0.5px;
-            min-height: 1em;
+            letter-spacing: -0.5px; min-height: 1em;
         }
 
-        /* Анимация мерцания */
         .blink { animation: blink-anim 1s infinite; }
         @keyframes blink-anim { 0%, 100% { opacity: 1; } 50% { opacity: 0.3; } }
         
@@ -158,6 +150,10 @@
             letter-spacing: 0.5px;
         }
         .tooltip-wrapper:hover .tooltip-content { display: block; }
+        
+        #about-tooltip { left: 0; }
+        /* Теперь выезжает влево */
+        #sound-tooltip { right: 0; transform-origin: right; }
 
         @media (min-width: 500px) { .content-fade { align-self: center; } .title-wrapper { left: calc(50% - 230px); } }
     </style>
@@ -224,7 +220,8 @@
         let cursorX = mouseX, cursorY = mouseY, animationsStarted = false;
 
         const phrases = ["ALL BUTTONS CLICKABLE / HOLD TO STOP TEXT", "DM ME FOR ADS/SONG - @EELEVEX (4FREE)"];
-        let currentPhraseIdx = 0, marqueeCurrentSpeed = 2.0, marqueeTargetSpeed = 2.0, galleryPos = 0, targetSpeed = 0;
+        let currentPhraseIdx = 0, marqueeCurrentSpeed = 2.0, marqueeTargetSpeed = 2.0;
+        let galleryPos = 0, currentGallerySpeed = 0, targetGallerySpeed = 0;
 
         function updateMusic() {
             const isCustom = document.body.classList.contains('custom-mode');
@@ -235,20 +232,13 @@
             other.pause(); cur.play();
         }
 
-        function setModeText() {
-            if (document.body.classList.contains('custom-mode')) {
-                modeBtn.innerText = "[ MODE: SECRET ]";
-            } else {
-                modeBtn.innerText = isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]";
-            }
-        }
-
         const handleStart = () => {
             pressTimer = setTimeout(() => {
                 const active = document.body.classList.toggle('custom-mode');
                 if (active) document.body.classList.remove('dark-mode');
                 else document.body.classList.toggle('dark-mode', isDarkMode);
-                setModeText(); updateMusic();
+                modeBtn.innerText = active ? "[ MODE: SECRET ]" : (isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]");
+                updateMusic();
                 pressTimer = null;
             }, 800);
         };
@@ -260,7 +250,8 @@
                     isDarkMode = !isDarkMode;
                     document.body.classList.toggle('dark-mode', isDarkMode);
                 }
-                setModeText(); updateMusic();
+                modeBtn.innerText = document.body.classList.contains('custom-mode') ? "[ MODE: SECRET ]" : (isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]");
+                updateMusic();
                 pressTimer = null;
             }
         };
@@ -270,6 +261,7 @@
         topBar.addEventListener('pointerdown', () => marqueeTargetSpeed = 0);
         window.addEventListener('pointerup', () => marqueeTargetSpeed = 2.0);
 
+        // Управление видимостью курсора
         const updatePos = (e) => {
             cursor.style.opacity = '1';
             let ev = e.touches ? e.touches[0] : e;
@@ -278,7 +270,10 @@
 
         window.addEventListener('mousemove', updatePos, { passive: true });
         window.addEventListener('touchstart', updatePos, { passive: true });
-        window.addEventListener('touchmove', updatePos, { passive: true });
+        document.addEventListener('mouseleave', () => cursor.style.opacity = '0');
+        document.addEventListener('mouseenter', () => cursor.style.opacity = '1');
+        window.addEventListener('blur', () => cursor.style.opacity = '0');
+        window.addEventListener('focus', () => cursor.style.opacity = '1');
 
         discordBtn.addEventListener('click', () => {
             navigator.clipboard.writeText('dnka').then(() => {
@@ -289,22 +284,19 @@
 
         const textToType = "HELLO, IM DNKA!";
         let charIdx = 0;
-
         function typeView() {
             if (charIdx < textToType.length) {
                 typewriterTitle.textContent += textToType.charAt(charIdx++);
                 setTimeout(typeView, 120);
             } else {
-                // Текст напечатан. Начинаем мерцать (скрытый прелоадер)
                 typewriterTitle.classList.add('blink');
                 setTimeout(() => {
-                    // Через 2 секунды мерцания продолжаем
                     typewriterTitle.classList.remove('blink');
                     document.getElementById('main-title').classList.add('moved');
                     setTimeout(() => {
                         document.getElementById('main-content').classList.add('visible');
-                        topBar.style.opacity = '1'; // Показываем верхнюю строку
-                        animationsStarted = true;   // Запускаем её движение
+                        topBar.style.opacity = '1';
+                        animationsStarted = true;
                     }, 1000);
                 }, 2000);
             }
@@ -317,7 +309,9 @@
             cursor.style.transform = `translate3d(${cursorX}px, ${cursorY}px, 0) translate(-50%, -50%)`;
 
             if (animationsStarted) {
-                galleryPos -= targetSpeed;
+                // Плавное изменение скорости карусели
+                currentGallerySpeed += (targetGallerySpeed - currentGallerySpeed) * 0.05;
+                galleryPos -= currentGallerySpeed;
                 if (Math.abs(galleryPos) >= gallery.offsetWidth / 2) galleryPos = 0;
                 gallery.style.transform = `translateX(${galleryPos}px)`;
 
@@ -336,8 +330,16 @@
         muteBtn.addEventListener('click', () => {
             isMuted = !isMuted;
             const cur = document.body.classList.contains('custom-mode') ? audioCustom : audioDefault;
-            if (!isMuted) { cur.play(); muteBtn.innerText = "[ SOUND: ON ]"; targetSpeed = 1.2; }
-            else { audioDefault.pause(); audioCustom.pause(); muteBtn.innerText = "[ SOUND: OFF ]"; targetSpeed = 0; }
+            if (!isMuted) { 
+                cur.play(); 
+                muteBtn.innerText = "[ SOUND: ON ]"; 
+                targetGallerySpeed = 1.2; 
+            } else { 
+                audioDefault.pause(); 
+                audioCustom.pause(); 
+                muteBtn.innerText = "[ SOUND: OFF ]"; 
+                targetGallerySpeed = 0; 
+            }
         });
 
         window.onload = () => { typeView(); loop(); };
