--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         
         .location-text { 
             font-size: 9.5px; text-transform: uppercase; margin-top: 1px; opacity: 0; 
-            font-weight: bold; /* Сделано жирнее */
+            font-weight: bold;
             color: var(--main-color); transition: color 0.4s ease, opacity 0.5s ease;
             letter-spacing: 0.5px; 
         }
@@ -124,7 +124,7 @@
         .gallery { 
             display: flex; width: max-content; 
             filter: var(--gallery-filter); transition: filter 0.4s ease;
-            font-size: 0; /* Убирает микро-пробелы между inline-элементами */
+            font-size: 0; 
         }
         .gallery img { width: 280px; height: auto; display: block; padding: 0; margin: 0; }
 
@@ -272,7 +272,9 @@
         };
 
         window.addEventListener('mousemove', updatePos, { passive: true });
-        window.addEventListener('touchstart', updatePos, { passive: true });
+        window.addEventListener('touchstart', updatePos, { passive: false });
+        window.addEventListener('touchmove', (e) => { updatePos(e); }, { passive: false });
+        
         document.addEventListener('mouseleave', () => cursor.style.opacity = '0');
         document.addEventListener('mouseenter', () => cursor.style.opacity = '1');
         window.addEventListener('blur', () => cursor.style.opacity = '0');
