--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             position: fixed; top: 0; left: 0;
             pointer-events: none; z-index: 999999;
             mix-blend-mode: difference;
-            background: #fff; opacity: 0;
+            background: #fff; opacity: 0; /* Изначально скрыт */
             will-change: transform, opacity;
             transition: opacity 0.3s ease;
         }
@@ -222,7 +222,9 @@
         let isDarkMode = false, isMuted = true, pressTimer;
         let mouseX = window.innerWidth / 2, mouseY = window.innerHeight / 2;
         let cursorX = mouseX, cursorY = mouseY, animationsStarted = false;
-        let idleTimer; // Таймер неактивности
+        
+        let idleTimer;
+        let canShowCursor = false; // Блокировка показа до конца анимации
 
         const phrases = ["ALL BUTTONS CLICKABLE / HOLD TO STOP TEXT", "DM ME FOR ADS/SONG - @EELEVEX (4FREE)"];
         let currentPhraseIdx = 0, marqueeCurrentSpeed = 2.0, marqueeTargetSpeed = 2.0;
@@ -266,12 +268,13 @@
         topBar.addEventListener('pointerdown', () => marqueeTargetSpeed = 0);
         window.addEventListener('pointerup', () => marqueeTargetSpeed = 2.0);
 
-        // Логика скрытия курсора
+        // Логика курсора
         const hideCursor = () => { cursor.style.opacity = '0'; };
         const resetIdleTimer = () => {
+            if (!canShowCursor) return; // Не показываем, пока текст не на месте
             cursor.style.opacity = '1';
             clearTimeout(idleTimer);
-            idleTimer = setTimeout(hideCursor, 1500); // 1.5 сек
+            idleTimer = setTimeout(hideCursor, 600); // 0.6 сек
         };
 
         const updatePos = (e) => {
@@ -307,10 +310,13 @@
                 setTimeout(() => {
                     typewriterTitle.classList.remove('blink');
                     document.getElementById('main-title').classList.add('moved');
+                    
+                    // Когда текст "встал на место":
                     setTimeout(() => {
                         document.getElementById('main-content').classList.add('visible');
                         topBar.style.opacity = '1';
                         animationsStarted = true;
+                        canShowCursor = true; // РАЗРЕШАЕМ ПОКАЗ КУРСОРA
                     }, 1000);
                 }, 2000);
             }
@@ -355,7 +361,7 @@
             }
         });
 
-        window.onload = () => { typeView(); loop(); resetIdleTimer(); };
+        window.onload = () => { typeView(); loop(); };
     </script>
 </body>
 </html>
