--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             color: var(--main-color);
             margin: 0; height: 100vh; width: 100vw;
             overflow: hidden; display: flex; flex-direction: column; align-items: center;
+            transition: opacity 0.5s ease;
         }
 
         #custom-cursor {
@@ -67,10 +68,11 @@
         }
 
         .top-bar {
-            background: var(--top-bar-bg); color: var(--top-bar-text); font-size: 10px; height: 22px;
+            background: var(--top-bar-bg); color: var(--top-bar-text); 
+            font-size: 11px; font-weight: bold; height: 32px;
             display: flex; align-items: center; position: fixed; top: 0; width: 100%;
             transition: 0.5s ease; z-index: 100; overflow: hidden;
-            letter-spacing: 0.5px; opacity: 0;
+            letter-spacing: 1px; opacity: 0;
         }
 
         #marquee-text { white-space: nowrap; will-change: transform; pointer-events: auto; }
@@ -83,101 +85,85 @@
         h1 { 
             font-size: 14px; font-weight: bold; text-transform: uppercase; margin: 0; 
             color: var(--main-color); transition: color 0.4s ease, font-size 0.8s ease;
-            letter-spacing: -0.5px; min-height: 1em;
+            letter-spacing: -0.5px;
         }
 
         .location-text { 
-            font-size: 9.5px; text-transform: uppercase; margin-top: 1px; opacity: 0; 
+            font-size: 9px; text-transform: uppercase; margin-top: 1px; opacity: 0; 
             font-weight: bold; color: var(--main-color); transition: 0.5s ease;
-            letter-spacing: 0.5px; 
         }
 
-        .title-wrapper.moved { top: 40px; transform: translateY(0); }
-        .title-wrapper.moved h1 { font-size: 24px; }
+        .title-wrapper.moved { top: 55px; transform: translateY(0); }
+        .title-wrapper.moved h1 { font-size: 22px; }
         .title-wrapper.moved .location-text { opacity: 1; }
 
         .content-fade {
             opacity: 0; visibility: hidden; transition: 0.8s;
-            padding: 20px; margin-top: 75px; width: 100%; max-width: 500px;
+            padding: 20px; margin-top: 95px; width: 100%; 
+            max-width: 440px;
             display: flex; flex-direction: column;
         }
         .content-fade.visible { opacity: 1; visibility: visible; }
 
         .link-text {
-            display: block; font-weight: bold; font-size: 13px; text-transform: uppercase;
-            color: var(--main-color); text-decoration: none; margin-bottom: 5px; padding: 8px 0;
+            display: block; font-weight: bold; font-size: 12px; text-transform: uppercase;
+            color: var(--main-color); text-decoration: none; margin-bottom: 4px; padding: 6px 0;
             border-bottom: 1px solid var(--main-color); transition: 0.4s ease;
-            letter-spacing: 0.2px;
         }
 
-        .gallery-container { overflow: hidden; width: 100%; margin-top: 20px; position: relative; min-height: 250px; }
-        .gallery { 
-            display: flex; width: max-content; 
-            filter: var(--gallery-filter); transition: filter 0.4s ease; font-size: 0; 
-            will-change: transform;
-        }
-        .gallery img { width: 280px; height: auto; display: block; }
+        .gallery-container { overflow: hidden; width: 100%; margin-top: 15px; position: relative; min-height: 220px; }
+        .gallery { display: flex; width: max-content; filter: var(--gallery-filter); transition: filter 0.4s ease; will-change: transform; }
+        .gallery img { width: 240px; height: auto; display: block; }
 
-        /* GAME UI */
-        #game-box { 
-            display: none; width: 100%; gap: 20px; 
-            justify-content: flex-start; align-items: flex-start; 
-        }
+        #game-box { display: none; width: 100%; gap: 15px; }
         .game-grid {
             display: grid; grid-template-columns: repeat(8, 1fr); gap: 2px;
             background: var(--main-color); border: 2px solid var(--main-color);
-            width: 220px; height: 220px;
+            width: 190px; height: 190px;
         }
         .cell { background: var(--bg-color); width: 100%; height: 100%; }
         .cell.filled { background: var(--main-color); }
-
-        .game-sidebar { display: flex; flex-direction: column; gap: 8px; align-items: flex-start; }
-        .score-display { font-size: 11px; font-weight: bold; }
-        #pieces-container { display: flex; flex-direction: column; gap: 10px; }
+        .score-display { font-size: 10px; font-weight: bold; }
+        #pieces-container { display: flex; flex-direction: column; gap: 8px; }
 
         .shape-container {
-            width: 45px; height: 45px; display: grid; 
+            width: 40px; height: 40px; display: grid; 
             grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(3, 1fr);
-            gap: 2px; padding: 2px; border: 1px solid var(--main-color);
-            position: relative; touch-action: none;
+            gap: 2px; padding: 1px; border: 1px solid var(--main-color);
+            position: relative;
         }
-        
-        /* DRAGGING PIECE FIX */
         .shape-container.dragging {
             position: fixed; z-index: 10000; pointer-events: none; border: none;
-            width: 90px; height: 90px; transform: translate(-50%, -50%);
-            background: transparent; opacity: 1 !important; visibility: visible !important;
+            width: 80px; height: 80px; transform: translate(-50%, -50%);
+            background: transparent !important;
         }
-        .shape-container.dragging .shape-cell:not(.active) { visibility: hidden; }
-        .shape-cell { width: 100%; height: 100%; }
         .shape-cell.active { background: var(--main-color); }
 
-        /* TOOLTIPS */
         .bottom-bar {
             position: fixed; bottom: 0; left: 50%; transform: translateX(-50%);
-            width: 100%; max-width: 500px; padding: 15px 20px;
+            width: 100%; max-width: 440px; padding: 10px 20px;
             display: flex; justify-content: space-between; align-items: flex-end; z-index: 200;
+        }
+        .bottom-btn {
+            background: var(--btn-bg); color: var(--btn-text); border: none; 
+            padding: 4px 10px;
+            font-family: 'Bookish Book', sans-serif; font-size: 8px;
+            text-transform: uppercase; transition: 0.3s ease;
         }
         .bottom-btn-wrapper { position: relative; display: inline-block; }
         .tooltip-info {
-            position: absolute; bottom: 32px; left: 0;
+            position: absolute; bottom: 24px; left: 0;
             background: var(--btn-bg); color: var(--btn-text);
-            padding: 8px 12px; font-size: 9px; text-transform: uppercase;
+            padding: 5px 8px; font-size: 7.5px; text-transform: uppercase;
             white-space: nowrap; visibility: hidden; opacity: 0;
-            transition: 0.3s; z-index: 300; border: 1px solid var(--main-color);
+            border: 1px solid var(--main-color); transition: 0.2s;
         }
         .tooltip-left { left: auto; right: 0; }
         .bottom-btn-wrapper:hover .tooltip-info { visibility: visible; opacity: 1; }
 
-        .bottom-btn {
-            background: var(--btn-bg); color: var(--btn-text); border: none; padding: 8px 12px;
-            font-family: 'Bookish Book', sans-serif; font-size: 10px;
-            text-transform: uppercase; transition: 0.4s ease; letter-spacing: 0.5px;
-        }
+        .copyright { font-size: 7.5px; text-transform: uppercase; color: var(--main-color); margin-top: 8px; }
 
-        .copyright { font-size: 8px; text-transform: uppercase; color: var(--main-color); margin-top: 10px; letter-spacing: 0.5px; }
-
-        @media (min-width: 500px) { .title-wrapper { left: calc(50% - 230px); } }
+        @media (min-width: 440px) { .title-wrapper { left: calc(50% - 200px); } }
     </style>
 </head>
 <body oncontextmenu="return false;">
@@ -186,7 +172,7 @@
     <audio id="custom-music" loop><source src="music1.mp3" type="audio/mpeg"></audio>
 
     <div class="top-bar" id="top-bar">
-        <div id="marquee-text">ALL BUTTONS CLICKABLE / HOLD TO STOP TEXT</div>
+        <div id="marquee-text">ALL BUTTONS CLICKABLE / HOLD TO STOP TEXT / KHARKIV 2026</div>
     </div>
 
     <div class="title-wrapper" id="main-title">
@@ -208,7 +194,6 @@
                 <img src="1.png"><img src="2.png"><img src="3.png"><img src="4.png"><img src="5.png"><img src="6.png"><img src="7.png">
                 <img src="1.png"><img src="2.png"><img src="3.png"><img src="4.png"><img src="5.png"><img src="6.png"><img src="7.png">
             </div>
-
             <div id="game-box">
                 <div class="game-grid" id="grid"></div>
                 <div class="game-sidebar">
@@ -221,14 +206,14 @@
     </div>
 
     <div class="bottom-bar">
-        <div style="display: flex; gap: 10px;">
+        <div style="display: flex; gap: 6px;">
             <button class="bottom-btn" id="play-btn" style="display:none;">[ PLAY ]</button>
             <div class="bottom-btn-wrapper">
                 <div class="tooltip-info">19 years / love money / hate fat bitches / 11 w2026</div>
                 <button class="bottom-btn">[ ABOUT ME ]</button>
             </div>
         </div>
-        <div style="gap: 10px; display: flex;">
+        <div style="gap: 6px; display: flex;">
             <button class="bottom-btn" id="mode-btn">[ MODE: LIGHT ]</button>
             <div class="bottom-btn-wrapper">
                 <div class="tooltip-info tooltip-left">VZk1ll Turbo 2000 - MESTO SMERTI</div>
@@ -255,12 +240,11 @@
         let isDarkMode = false, isMuted = true, pressTimer;
         let mouseX = 0, mouseY = 0, cursorX = 0, cursorY = 0, firstMove = true;
         let board = Array(64).fill(0), score = 0, shapesUsed = 0;
-
         let marqueeSpeed = 1.5, targetMarqueeSpeed = 1.5;
         let galleryPos = 0, gallerySpeed = 0, targetGallerySpeed = 0;
 
-        marqueeEl.parentElement.addEventListener('pointerdown', () => targetMarqueeSpeed = 0);
-        window.addEventListener('pointerup', () => targetMarqueeSpeed = 1.5);
+        document.addEventListener('mouseleave', () => { document.body.style.opacity = '0'; cursor.style.opacity = '0'; firstMove = true; });
+        document.addEventListener('mouseenter', () => { document.body.style.opacity = '1'; });
 
         document.addEventListener('pointermove', (e) => {
             mouseX = e.clientX; mouseY = e.clientY;
@@ -278,26 +262,32 @@
             other.pause(); cur.play();
         }
 
-        modeBtn.addEventListener('pointerdown', () => {
+        // --- FIXED THEME BUTTON FOR MOBILE ---
+        modeBtn.addEventListener('pointerdown', (e) => {
+            e.preventDefault();
             pressTimer = setTimeout(() => {
-                const active = document.body.classList.toggle('custom-mode');
-                if (active) document.body.classList.remove('dark-mode');
-                else document.body.classList.toggle('dark-mode', isDarkMode);
-                modeBtn.innerText = active ? "[ MODE: SECRET ]" : (isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]");
+                const isCustom = document.body.classList.toggle('custom-mode');
+                if (isCustom) document.body.classList.remove('dark-mode');
+                else if (isDarkMode) document.body.classList.add('dark-mode');
+                modeBtn.innerText = isCustom ? "[ MODE: SECRET ]" : (isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]");
                 updateMusic();
+                pressTimer = null;
             }, 800);
         });
 
         window.addEventListener('pointerup', () => {
             if (pressTimer) {
                 clearTimeout(pressTimer);
-                if (!document.body.classList.contains('custom-mode')) {
+                pressTimer = null;
+                if (document.body.classList.contains('custom-mode')) {
+                    document.body.classList.remove('custom-mode');
+                    if (isDarkMode) document.body.classList.add('dark-mode');
+                } else {
                     isDarkMode = !isDarkMode;
                     document.body.classList.toggle('dark-mode', isDarkMode);
                 }
                 modeBtn.innerText = document.body.classList.contains('custom-mode') ? "[ MODE: SECRET ]" : (isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]");
                 updateMusic();
-                pressTimer = null;
             }
         });
 
@@ -322,7 +312,6 @@
             cursorX += (mouseX - cursorX) * 0.15;
             cursorY += (mouseY - cursorY) * 0.15;
             cursor.style.transform = `translate3d(${cursorX}px, ${cursorY}px, 0) translate(-50%, -50%)`;
-
             marqueeSpeed += (targetMarqueeSpeed - marqueeSpeed) * 0.08;
             if (document.getElementById('top-bar').style.opacity === '1') {
                 let mPos = parseFloat(marqueeEl.dataset.pos || 0);
@@ -331,7 +320,6 @@
                 marqueeEl.style.transform = `translateX(${mPos}px)`;
                 marqueeEl.dataset.pos = mPos;
             }
-
             gallerySpeed += (targetGallerySpeed - gallerySpeed) * 0.05;
             if (gallerySpeed > 0.01) {
                 galleryPos -= gallerySpeed;
@@ -348,8 +336,7 @@
             else { audioDefault.pause(); audioCustom.pause(); muteBtn.innerText = "[ SOUND: OFF ]"; targetGallerySpeed = 0; }
         });
 
-        // --- GAME LOGIC ---
-        const shapes = [[[1,1,0],[1,1,0],[0,0,0]], [[1,1,1],[0,0,0],[0,0,0]], [[1,0,0],[1,0,0],[1,0,0]], [[1,1,0],[0,1,0],[0,1,0]], [[1,0,0],[1,1,1],[0,0,0]], [[1,0,0],[0,0,0],[0,0,0]]];
+        const shapes = [[[1,1,0],[1,1,0],[0,0,0]], [[1,1,1],[0,0,0],[0,0,0]], [[1,0,0],[1,0,0],[1,0,0]], [[1,1,0],[0,1,0],[0,1,0]], [[1,1,1],[1,1,1],[1,1,1]], [[1,1,1,1,1]], [[1,0,0],[0,0,0],[0,0,0]]];
 
         function initGame() {
             gridEl.innerHTML = ''; board.fill(0); score = 0; scoreEl.innerText = '0';
@@ -360,11 +347,12 @@
         function spawnPieces() {
             piecesEl.innerHTML = ''; shapesUsed = 0;
             for(let i=0; i<3; i++) {
-                const s = shapes[Math.floor(Math.random()*shapes.length)];
+                let randIdx = (score > 1000 && Math.random() > 0.6) ? Math.floor(Math.random() * shapes.length) : Math.floor(Math.random() * 4);
+                const s = shapes[randIdx];
                 const c = document.createElement('div'); c.className = 'shape-container';
-                for(let r=0; r<3; r++) for(let col=0; col<3; col++) {
+                for(let r=0; r<3; r++) for(let col=0; col<(s[0].length||3); col++) {
                     const cell = document.createElement('div');
-                    cell.className = 'shape-cell' + (s[r][col]?' active':'');
+                    cell.className = 'shape-cell' + (s[r] && s[r][col] ?' active':'');
                     c.appendChild(cell);
                 }
                 c.onpointerdown = (e) => startDrag(e, c, s);
@@ -377,44 +365,27 @@
             const clone = el.cloneNode(true); 
             clone.classList.add('dragging'); 
             clone.style.visibility = 'visible';
-            clone.style.opacity = '1';
-
             const currentColor = getComputedStyle(document.body).getPropertyValue('--main-color');
-            clone.querySelectorAll('.shape-cell.active').forEach(cell => {
-                cell.style.backgroundColor = currentColor;
-            });
-
+            clone.querySelectorAll('.shape-cell.active').forEach(cell => cell.style.backgroundColor = currentColor);
             document.body.appendChild(clone);
-            clone.style.left = e.clientX + 'px';
-            clone.style.top = e.clientY + 'px';
-
-            const move = (me) => {
-                clone.style.left = me.clientX + 'px'; 
-                clone.style.top = me.clientY + 'px';
-            };
-
+            clone.style.left = e.clientX + 'px'; clone.style.top = e.clientY + 'px';
+            const move = (me) => { clone.style.left = me.clientX + 'px'; clone.style.top = me.clientY + 'px'; };
             const up = (ue) => {
-                window.removeEventListener('pointermove', move); 
-                window.removeEventListener('pointerup', up);
+                window.removeEventListener('pointermove', move); window.removeEventListener('pointerup', up);
                 if(tryPlace(ue.clientX, ue.clientY, s)) {
-                    shapesUsed++;
-                    if(shapesUsed === 3) spawnPieces();
+                    shapesUsed++; if(shapesUsed === 3) spawnPieces();
                     document.body.removeChild(clone);
-                } else { 
-                    el.style.visibility = 'visible';
-                    document.body.removeChild(clone);
-                }
+                } else { el.style.visibility = 'visible'; document.body.removeChild(clone); }
             };
-            window.addEventListener('pointermove', move); 
-            window.addEventListener('pointerup', up);
+            window.addEventListener('pointermove', move); window.addEventListener('pointerup', up);
         }
 
         function tryPlace(mx, my, s) {
             const r = gridEl.getBoundingClientRect();
-            const x = Math.round((mx - r.left - 45)/ (r.width/8)), y = Math.round((my - r.top - 45)/ (r.height/8));
+            const x = Math.round((mx - r.left - 40)/ (r.width/8)), y = Math.round((my - r.top - 40)/ (r.height/8));
             if(canPlace(s, x, y)) {
-                for(let row=0; row<3; row++) for(let col=0; col<3; col++) {
-                    if(s[row][col]) {
+                for(let row=0; row<s.length; row++) for(let col=0; col<(s[0].length||3); col++) {
+                    if(s[row] && s[row][col]) {
                         board[(y+row)*8+(x+col)] = 1;
                         gridEl.children[(y+row)*8+(x+col)].classList.add('filled');
                     }
@@ -425,8 +396,8 @@
         }
 
         function canPlace(s, x, y) {
-            for(let r=0; r<3; r++) for(let c=0; c<3; c++) {
-                if(s[r][c]) {
+            for(let r=0; r<s.length; r++) for(let c=0; c<(s[0].length||3); c++) {
+                if(s[r] && s[r][c]) {
                     let nx = x+c, ny = y+r;
                     if(nx<0||ny<0||nx>=8||ny>=8||board[ny*8+nx]) return false;
                 }
@@ -441,8 +412,12 @@
                 let col=[]; for(let r=0; r<8; r++) col.push(board[r*8+c]);
                 if(col.every(v=>v)) cs.push(c);
             }
-            rs.forEach(r => { for(let i=0; i<8; i++){ board[r*8+i]=0; gridEl.children[r*8+i].classList.remove('filled'); } score+=100; });
-            cs.forEach(c => { for(let i=0; i<8; i++){ board[i*8+c]=0; gridEl.children[i*8+c].classList.remove('filled'); } score+=100; });
+            let mult = rs.length + cs.length;
+            if (mult > 0) {
+                rs.forEach(r => { for(let i=0; i<8; i++){ board[r*8+i]=0; gridEl.children[r*8+i].classList.remove('filled'); } });
+                cs.forEach(c => { for(let i=0; i<8; i++){ board[i*8+c]=0; gridEl.children[i*8+c].classList.remove('filled'); } });
+                score += (100 * mult) * mult;
+            }
             scoreEl.innerText = score;
         }
 
